# mostrix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  MOSTRIX_OVERVIEW.md  PR_DESCRIPTION.md  README.md  cliff.toml  create_pr.sh  debug-notes.md  pr_body.md  settings.toml
.cursor/commands/: build.md  pull_request.md  update_docs.md
.github/workflows/: ci.yml  coverage.yml  release.yml  sync-readme-badges.yml
coverage/: badge.json  index.html  lcov.info
coverage/coverage/home/runner/work/mostrix/mostrix/src/: db.rs.html  main.rs.html  models.rs.html  settings.rs.html  startup.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/shared/: permissions.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/ui/: admin_key_confirm.rs.html  app_state.rs.html  chat.rs.html  constants.rs.html  currencies.rs.html  dispute_bond_slash_popup.rs.html  dispute_finalization_confirm.rs.html  dispute_finalization_popup.rs.html  draw.rs.html  exit_confirm.rs.html  generate_keys_popup.rs.html  help_popup.rs.html  key_input_popup.rs.html  message_notification.rs.html  navigation.rs.html  network_status.rs.html  offline_overlay.rs.html  operation_result.rs.html  order_confirm.rs.html  order_form.rs.html  order_take.rs.html  orders.rs.html  save_attachment_popup.rs.html  send_attachment_picker.rs.html  startup_splash.rs.html  status.rs.html  waiting.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/ui/helpers/: ascii_art.rs.html  attachments.rs.html  chat_render.rs.html  chat_storage.rs.html  chat_visibility.rs.html  formatting.rs.html  layout.rs.html  order_chat_projection.rs.html  startup.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/ui/key_handler/: admin_handlers.rs.html  async_tasks.rs.html  chat_helpers.rs.html  confirmation.rs.html  enter_handlers.rs.html  esc_handlers.rs.html  form_input.rs.html  input_helpers.rs.html  message_handlers.rs.html  mod.rs.html  navigation.rs.html  settings.rs.html  user_handlers.rs.html  validation.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/ui/tabs/: disputes_in_progress_tab.rs.html  disputes_tab.rs.html  message_flow_tab.rs.html  mostro_info_tab.rs.html  observer_tab.rs.html  order_in_progress_tab.rs.html  orders_tab.rs.html  settings_tab.rs.html  tab_bar.rs.html  tab_content.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/util/: blossom.rs.html  chat_listener.rs.html  chat_utils.rs.html  db_utils.rs.html  fatal.rs.html  file_validation.rs.html  filters.rs.html  ln_address.rs.html  mostro_info.rs.html  network.rs.html  send_attachment.rs.html  types.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/util/dm_utils/: dm_helpers.rs.html  mod.rs.html  notifications_ch_mng.rs.html  order_ch_mng.rs.html  order_result_tx.rs.html
coverage/coverage/home/runner/work/mostrix/mostrix/src/util/order_utils/: bond_resolution.rs.html  execute_add_invoice.rs.html  execute_admin_add_solver.rs.html  execute_admin_cancel.rs.html  execute_admin_settle.rs.html  execute_finalize_dispute.rs.html  execute_send_msg.rs.html  execute_take_dispute.rs.html  fetch_scheduler.rs.html  helper.rs.html  relay_order_db_reconcile.rs.html  send_new_order.rs.html  take_order.rs.html
docs/: ADMIN_DISPUTES.md  CODING_STANDARDS.md  DATABASE.md  DM_LISTENER_FLOW.md  FINALIZE_DISPUTES.md  KEYBINDING_PROPOSAL.md  KEY_MANAGEMENT.md  MESSAGE_FLOW_AND_PROTOCOL.md  POW_AND_OUTBOUND_EVENTS.md  RANGE_ORDERS.md  README.md  SETTINGS_ANALYSIS.md  STARTUP_AND_CONFIG.md  TUI_INTERFACE.md  buy order flow.md  sell order flow.md
src/: adapter.rs  db.rs  lib.rs  main.rs  models.rs  settings.rs  startup.rs  util.rs
src/shared/: permissions.rs
src/ui/: admin_key_confirm.rs  admin_state.rs  app_state.rs  chat.rs  chat_bootstrap.rs  constants.rs  currencies.rs  dispute_bond_slash_popup.rs  dispute_finalization_confirm.rs  dispute_finalization_popup.rs  disputes_in_progress_tab.rs  disputes_tab.rs  draw.rs  exit_confirm.rs  generate_keys_popup.rs  help_popup.rs  helpers.rs  key_handler.rs  key_input_popup.rs  message_notification.rs  mod.rs  navigation.rs  network_status.rs  offline_overlay.rs  operation_result.rs  order_confirm.rs  order_form.rs  order_result.rs  order_take.rs  orders.rs  orders_tab.rs  save_attachment_popup.rs  send_attachment_picker.rs  settings_tab.rs  startup_splash.rs  state.rs  status.rs  tab_content.rs  tabs.rs  take_order_confirm.rs  (+2 more)
src/ui/helpers/: ascii_art.rs  attachments.rs  chat_render.rs  chat_storage.rs  chat_visibility.rs  formatting.rs  layout.rs  mod.rs  order_chat_projection.rs  startup.rs
src/ui/key_handler/: admin_handlers.rs  async_tasks.rs  chat_helpers.rs  confirmation.rs  enter_handlers.rs  esc_handlers.rs  form_input.rs  input_helpers.rs  message_handlers.rs  mod.rs  navigation.rs  settings.rs  user_handlers.rs  validation.rs
src/ui/tabs/: disputes_in_progress_tab.rs  disputes_tab.rs  message_flow_tab.rs  mod.rs  mostro_info_tab.rs  my_trades_tab.rs  observer_tab.rs  order_in_progress_tab.rs  orders_tab.rs  settings_tab.rs  tab_bar.rs  tab_content.rs
src/util/: blossom.rs  chat_listener.rs  chat_utils.rs  db_utils.rs  dm_utils.rs  fatal.rs  file_validation.rs  filters.rs  ln_address.rs  mod.rs  mostro_info.rs  network.rs  nostr_utils.rs  order_utils.rs  send_attachment.rs  types.rs
src/util/dm_manager/: dm_helpers.rs  mod.rs  notifications_ch_mng.rs  order_ch_mng.rs
src/util/dm_utils/: dm_helpers.rs  mod.rs  notifications_ch_mng.rs  order_ch_mng.rs  order_result_tx.rs
src/util/order_utils/: bond_resolution.rs  execute_add_invoice.rs  execute_admin_add_solver.rs  execute_admin_cancel.rs  execute_admin_settle.rs  execute_finalize_dispute.rs  execute_send_msg.rs  execute_take_dispute.rs  fetch_scheduler.rs  helper.rs  mod.rs  relay_order_db_reconcile.rs  send_new_order.rs  take_order.rs
static/: startup-logo.txt
tests/: db_tests.rs  helper_tests.rs  parsing_tests.rs  validation_tests.rs
tests/common/: mod.rs
