[package]
name = "mostrix"
version = "0.1.0"
rust-version = "1.90.0"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Mostro TUI client"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
mostro-core = "0.7.0"
nostr-sdk = { version = "0.43.0", features = ["nip06", "nip44", "nip59"] }
bip39 = { version = "2.1.0", features = ["rand"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = "0.4"
futures = "0.3"
anyhow = "1.0.98"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.27"
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.8"
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
lightning-invoice = { version = "0.34.0", features = ["std"] }
lnurl-rs = { version = "0.9.0", default-features = false, features = ["ureq"] }
arboard = "3.3"
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "json", "http2"] }
chacha20poly1305 = "0.10"
tui-scrollview = "0.6"
zeroize = "1.8"

[package.metadata.release]
# (Default: true) Set to false to prevent automatically running `cargo publish`.
publish = false
# (Default: true) Set to false to prevent automatically pushing commits and tags to the Git remote.
push = true
# (Default: true) Run `cargo test` before release? Highly recommended.
verify = true
# (Default: true) Create a Git tag for the release (e.g., v0.2.1)? You usually want this.
tag = true
# (Default: false) Sign the release commit with GPG?
sign-commit = true
# (Default: false) Sign the release tag with GPG?
sign-tag = true
# Use 'allow-branch' if you release from other branches. Check defaults if needed.
allow-branch = ["main"]
# Generate CHANGELOG.md before creating the release tag (only during actual release, not dry-run)
pre-release-hook = [
  "sh",
  "-c",
  "cargo fmt --all && cargo clippy --all-targets --all-features -- -D warnings && if [ -n \"${GITHUB_TOKEN:-}\" ]; then GITHUB_TOKEN=\"$GITHUB_TOKEN\" git cliff --unreleased --github-repo MostroP2P/mostrix -o CHANGELOG.md --tag {{version}}; else git cliff --unreleased -o CHANGELOG.md --tag {{version}}; fi && if [ \"$DRY_RUN\" != \"true\" ]; then git diff --quiet CHANGELOG.md || git add CHANGELOG.md && git commit -m \"Update CHANGELOG for version {{version}}\"; else echo \"DRY RUN: Skip git add and commit\"; fi",
]
