[package]
name = "mostrix"
version = "0.2.1"
rust-version = "1.90.0"
edition = "2021"
license = "MIT"
authors = ["Francisco Calderón <negrunch@grunch.dev>"]
description = "Mostro TUI client"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
mostro-core = "0.13.0"
nostr-sdk = { version = "0.44.1", features = ["nip06", "nip44", "nip59"] }
bip39 = { version = "2.1.0", features = ["rand"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
chrono = "0.4"
futures = "0.3"
anyhow = "1.0.98"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.27"
config = { version = "0.15.22", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
base64 = "0.22.1"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
lightning-invoice = { version = "0.34.0", features = ["std"] }
lnurl-rs = { version = "0.9.0", default-features = false, features = ["ureq"] }
arboard = { version = "3.3", features = ["wayland-data-control"] }
libc = "0.2"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "http2"] }
rustls = { version = "0.23.37", features = ["ring"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hex = "0.4"
tui-scrollview = "0.6"
ratatui-explorer = "0.3.0"
zeroize = "1.8"

[package.metadata.release]
publish = false
push = true
verify = true
tag = true
sign-commit = true
sign-tag = true
allow-branch = ["main"]
pre-release-hook = [
  "sh",
  "-c",
  "cargo fmt --all && cargo clippy --all-targets --all-features -- -D warnings && if [ -n \"${GITHUB_TOKEN:-}\" ]; then GITHUB_TOKEN=\"$GITHUB_TOKEN\" git cliff --unreleased --github-repo MostroP2P/mostrix -o CHANGELOG.md --tag {{version}}; else git cliff --unreleased -o CHANGELOG.md --tag {{version}}; fi && if [ \"$DRY_RUN\" != \"true\" ]; then git diff --quiet CHANGELOG.md || (git add CHANGELOG.md && git commit -m \"Update CHANGELOG for version {{version}}\"); else echo \"DRY RUN: Skip git add and commit\"; fi",
]
